sshme-in/infra/istio/peer-auth.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default-peerauth
spec:
  mtls:
    mode: STRICT
