sshme-in/infra/istio/service-entries.yaml
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: storage-hetzner
spec:
  hosts: ["storage.sshme.in"]
  exportTo: ["*"]
  location: MESH_EXTERNAL
  resolution: DNS
  ports:
  - number: 5432
    name: postgres
    protocol: TCP
  - number: 9000
    name: minio
    protocol: HTTP
  - number: 9001
    name: minio-console
    protocol: HTTP
